---
title: Recognition Service Persistence (PostgreSQL + pgvector)
---
erDiagram
    TENANTS {
        uuid id PK
        varchar slug UK
        varchar name
        varchar plan_tier
        timestamp created_at
        timestamp updated_at
    }

    ROSTER_ENTRIES {
        uuid id PK
        uuid tenant_id FK
        varchar label
        varchar display_name
        varchar model
        varchar type
        jsonb metadata
        vector aggregate_embedding
        timestamp created_at
        timestamp updated_at
    }

    REFERENCE_EMBEDDINGS {
        uuid id PK
        uuid roster_entry_id FK
        vector embedding
        varchar image_path
        jsonb metadata
        timestamp created_at
    }

    AUGMENTED_EMBEDDINGS {
        uuid id PK
        uuid roster_entry_id FK
        varchar observation_id UK
        vector embedding
        varchar source
        int attachment_id
        jsonb bbox
        float confidence
        varchar quality_tier
        timestamp created_at
    }

    TENANTS ||--o{ ROSTER_ENTRIES : "owns"
    ROSTER_ENTRIES ||--o{ REFERENCE_EMBEDDINGS : "has reference"
    ROSTER_ENTRIES ||--o{ AUGMENTED_EMBEDDINGS : "collects progressive"
